2007-02-14  Dom Lachowicz <domlachowicz@gmail.com>

	* tests/Makefile.am: Bug 407230 - make check fails when builddir 
	!= srcdir in that certain headers are not found
	* tests/rsvg-test.c: Ditto

2007-02-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Add the W3C test files.

	* tests/rsvg-test.c: generates a html file with test failures.

2007-02-01  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-marker.c (rsvg_marker_render): Don't clip if overflow style
	property is set to visible. Fix display of markers generated with
	inkscape.

2007-01-30  Ross Burton <ross@burtonini.com>

	* rsvg-cairo-draw.c: Bug 402246 - Rsvg was leaking Pango contexts,
	layouts, and GList nodes.
	* rsvg-text.c: Ditto
	
2007-01-29  Dom Lachowicz <domlachowicz@gmail.com>

	* test-display.c: 402107 . rsvg_convert and rsvg_viiew crash if called without arguments
	* rsvg-convert.c: ditto
	
2007-01-27  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Regression test suite (use make check).

	* tests/rsvg-test.c: new.
	* tests/rsvg-test.txt: new. Contains the list of test files.
	* tests/bugs: directory for bug test files.
	* tests/samples: directory for random test files.
	* tests/svg1.2: directory for SVG 1.2 feature test files.

2007-01-27  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rvsg-cairo-draw.c (_rsvg_cairo_set_operator): add support for 'plus'
	comp-op.
	* rsvg-styles.c (rsvg_parse_style_arg): ditto.
	* rsvg-styles.h: ditto.
	
2007-01-25  Kouhei Sutou <kou@cozmixng.org>

	* rsvg-cairo-clip.c: Fix clipping regression introduced by the 
	2006-10-13 patch (bug 388545)
	
2007-01-13  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix Emacs modeline. Tab is 8 characters.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix indentation of *.h files. Running indent on them was not a good
	idea. Also add sts setting to vim modeline.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>
