@@ -1,3 +1,10 @@
+2007-02-21  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>
+
+	Implement letter-spacing property.
+	http://bugzilla.gnome.org/show_bug.cgi?id=410509
+	* rsvg-styles.c: parse and handle letter-spacing.
+	* rsvg-text.c (rsvg_text_create_layout): set letter spacing attribute.
+
 2007-02-14  Dom Lachowicz <domlachowicz@gmail.com>
 
 	* tests/Makefile.am: Bug 407230 - make check fails when builddir 
